2001-05-28  Dancer Vesperman <dancer@users.sourceforge.net>
	* actors.cc: uninline static method called from external translation
		units. (Otherwise we cannot link under some compilers. Duh)
	** Double extra bonus points. We now fully compile and link under G++
	   version 3.0 (at least, so far)

2001-05-28  Dancer Vesperman <dancer@users.sourceforge.net>
	* mapedit/shapelst.cc: std::cout,std::endl
	* audio/midi_drivers/Timidity_binary.cc: std::cout,std::endl,
		std::string
	* audio/midi_drivers/Timidity_binary.h: std::string
	* mapedit/paledit.cc: std::cout,std::endl,include iostream
	* mapedit/shapetest.cc: std::cout,std::endl,include iostream
2001-05-28  Jeff Freedman  <jeff@amy.nerble.net>
	* actors.cc: 'Stop Time' spell implemented.

2001-05-26  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h: 'Mode' field has gone away.  RIP.  Use
	showing_gumps() to test for gump mode.

2001-05-25  Tristan Tarrant  <nadir@users.sourceforge.net>

	* exult.cc: Added 400x300 to resolution cycler as requested on 
	Jackchaos

2001-05-25  Jeff Freedman  <jeff@amy.nerble.net>

	* Code cleanup:  Several 'modes' removed, along with the 'filter'
	in exult.cc.

2001-05-25  Jeff Freedman  <jeff@amy.nerble.net>

	* Ucmachine.cc: Just warn on stack underflow.
	* Actions.cc:  Center view if teleporting Avatar, and watch for
	Sequence action being deleted.
	So, except for Avatar being too dumb to open doors, trial seems
	to work.

2001-05-23  Ryan Nunn <triforce@merlin.net.au>
	* audio/Audio.cc: Put #ifdef ENABLE_MIDISFX around MIDI SFX code to
	  disable MIDI sfx's. Simply defining ENABLE_MIDISFX will re-enable
	  MIDI SFX.

2001-05-21  Jeff Freedman  <jeff@amy.nerble.net>

	* Rewrote intrinsic si_path_run_usecode() so it now schedules the
	actions.  Fixes double-conversation in Knight's banquet, and
	likely fixes and/or breaks lots of other things.

2001-05-19  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc: fixed "emerging Guardian" part in intro
